--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   },
   "dependencies": {
     "vue": "^3.5.18",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "sensemaking-tools": "file:../sensemaking-tools/library"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.2",
