--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
   },
   "dependencies": {
     "vue": "^3.5.18",
-    "vue-router": "^4.5.1",
-    "sensemaking-tools": "file:../sensemaking-tools/library"
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.2",
