--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "lint": "eslint . --fix"
   },
   "dependencies": {
+    "marked": "^16.2.1",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.2",
+    "@types/marked": "^5.0.2",
     "@types/node": "^22.16.5",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/eslint-config-typescript": "^14.6.0",
