--- a/.npmrc
+++ b/.npmrc
@@ -1,7 +1,4 @@
-# 避免平台特定依賴項問題
-optional=false
-# 確保在 CI 環境中正確安裝
-platform=linux
-arch=x64
+# 排除可選依賴項，避免平台特定依賴問題
+omit=optional
 # 使用 npm 的 legacy peer deps 模式
 legacy-peer-deps=true
