--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "marked": "^16.2.1",
     "vue": "^3.5.18",
+    "vue-i18n": "^12.0.0-alpha.3",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
